--- a/xxl-boot/pom.xml
+++ b/xxl-boot/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>xxl-job-core</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
 
     <build>
